support generic constraint custom attributes